--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
+    "daisyui": "^1.25.4",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
