--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -25,7 +25,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: Install Dependencies
-        if: ${{ steps.cache-npm.outputs.cache-hit == 'false' }}
+        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         continue-on-error: true
         run: npm ci
 
