--- a/package.json
+++ b/package.json
@@ -34,7 +34,13 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/typography": "^0.5.1",
     "autoprefixer": "^10.4.2",
+    "cz-conventional-changelog": "^3.3.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
